Update PropTypes for some of the props, and fix issue with scrollbar in main page

--- a/src/styles/abstracts/_utils.scss
+++ b/src/styles/abstracts/_utils.scss
@@ -5,5 +5,5 @@
 .hidden {
   position: absolute;
   height: 0;
-  left: 10000px;
+  left: -10000px;
 }
